# dslib

./: -a  CMakeLists.txt  all  main.c
.clangd/index/: array.c.DED3E239CE11E1A1.idx  array.h.EEDF448539626F37.idx  common.h.89264A2A9854DBC9.idx  linkedlist.c.8BE42DEC1E941215.idx  linkedlist.h.9A150E8021A09931.idx  main.c.E61757B142A7866C.idx  slinkedlist.c.8996113EE72DAC81.idx  slinkedlist.h.FB6E801F9A25D245.idx
include/: array.h  linkedlist.h  slinkedlist.h
src/: array.c  linkedlist.c  slinkedlist.c
